--- a/index.html
+++ b/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/dj.ico" type="image/x-icon">
-    <title>cd´j e controladoras</title>
+    <title>DJ BRIAN</title>
+    <link rel="shorycut icon" href="img/dj.ico" type="image/x-icon"> 
 </head>
 <body>
-    <h1>&#x1F3A7 Hoje vamos falar um pouco sobre o mundo dos djs
-        &#x1F3A7</h1>
-        <h2>Primeiramente vamos falar sobre os nossos equipamentos desde o mais simples ao mais sofisticado</h2>
-        <h3>CDJ's (Equipamento usado para reproduzir e ajustar a musíca que vai ser tocada)</h3>
-        <p>A mais atual hoje permite ler, não apenas discos (CDs e DVDs), mas também ficheiros de música gravados em cartões de memória SD e dispositivos USB (drives de memória flash e discos rígidos).<br> Os formatos de ficheiros de música suportados incluem, não apenas CDs de música (CD-DA) e MP3, mas também AAC, WAV e AIFF.
-        e atualmente consegue-se mudar a tonalidade da musíca antes de toca-lá 
-        </p>
-        <img src="https://www.hatudo.pt/images_v2/anuncios/manual/3300000/3390000/3390910/1664785045344_dj-2a-.jpg" alt="cdj 3000">
-        <p>Dentre os novos recursos reunidos na tela touch screen, estão:Touch Preview – permite visualizar outra faixa diretamente do navegador sem carregá-la em um deck;Touch Cue – permite que você pré-visualize qualquer parte de uma faixa em seus fones de ouvido, mesmo enquanto ela está sendo reproduzida;Key Shift – lhe dá controle sobre a Key de uma track sem alterar a velocidade de reprodução;Key Sync – analisa e combina automaticamente o tom da faixa que chega ao deck principal, permitindo uma mixagem mais suave Além de tudo isso, a funcionalidade Link foi atualizada, permitindo que você reproduza faixas de um único dispositivo de armazenamento através de seis CDJs. O brilho da tela veio com 150% mais brilho e resolução de 720p, deixando a visualização ainda mais eficaz.
+    <h1>Minhas redes sociais</h1>
+    <h2>Quem é 'BRIAN' ou melhor 'DJ BRIAN?</h2>
+    <img src="img/perfil.png" alt="foto de perfil">    <img src="img/eu 2.jpg" alt="presskit">
+   <h3> Brian Breder Felix</h3>
+<img src="img/dj100.ico" alt="fone"><img src="img/logo 100.jpg" alt="logo"><img src="img/dj100.ico" alt="fone">
+    <p><strong>Brian</strong> é um dos novos nomes da cena eletrônica,  com apenas 18 anos vem demonstrando toda sua personalidade, carisma e charme.</p>
 
-O curioso deste CDJ-3000 é que o formato de CD não será mais suportado, levantando o questionamento dos usuários mais divertidos de uma mudança para XDJ – para além disso, todos os outros formatos de mídia são permitidos.
+    <p> Conheceu o meio através de amigos e assim que escutou pela primeira vez, se apaixonou e teve certeza do que queria para sua vida.</p> 
 
-Se tratando do layout, não houve alterações significativas, mantendo a fidelidade com as versões anteriores. Porém, vale destacar os oito botões hot cue do 3000, quatro a mais do que o modelo antecedente, eles foram incorporados à parte inferior da tela de maneira a alinhar com a formato de onda do visualizador. Ademais, na parte superior foram inseridos novos botões para pesquisas de faixas em tracklists, com um teclado Qwerty na tela mais ágil.</p>
-<h2>O CDJ-3000 entrou na pré-venda com um valor de € 2.399, cerca de R$15 mil. O fato é: o CDJ-3000 é, de longe, o mais caro leitor de mídia de DJ do mercado.</h2>
-<h3>São usados com mixer que é feito para fazer a mixagem das musícas e controlam as frequencias das musicas (grave, médio, agudo) controlando também efeitos, volume e etc. </h3>
-<h1>controladoras:</h1>
-<img src="https://m.media-amazon.com/images/I/61Vz9GTbcNL._AC_SY450_.jpg" alt="controladora ddj 400">
-<p>As controladoras são outra opção de reprodutores. Elas são capazes de reproduzir músicas diretamente do computador do DJ,<br> fazendo com que não seja necessária a utilização de CDs e Pendrives. Em geral mas obrigatoriamente tem que estar conectado no computador,<br> as controladoras são bastante práticas e funcionam integradas a softwares e aplicativos específicos para isto.</p>
-<h2>Agora que você já sabe que CDJ e XDJ são multi players e são Stand Alone (equipamentos que não dependem de computador),<br> e que as controladoras são equipamentos que só tem utilidade para controlar o software, você já pode montar o seu set up sem medo de errar.</h2>
+    <p>Desse momento em diante, não tinha nada que tirasse isso da sua cabeça, então não parou de estudar e treinar, até conseguir dominar os equipamentos e a música rapidamente.</p>
+
+   <p>Agora vem ai para mostrar a que veio e dominar os palcos desse Brasil com o melhor da música eletrônica! </p>
+   <p>E atualmente está se desbravando e conquistando seu lugar no <strong>minimal prog</strong> vindo ai trazendo uma cara nova e um som unico para o publico e conta também com algumas músicas autorais vindo ai para quebrar tudo na pista e levar o publico ao seu máximo 🔥🔥🔥</p>
+   <h2>Como me encontrar?</h2>
+   <ul type="square" >
+    <li><img src="img/youtube icon.png">/<a href="https://www.youtube.com/@djbrian7050/featured" target="_blank" rel="next">DJ BRIAN</a>- Se increva no meu canal do YouTube  </li>
+    <li><img src="img/git icon.png" alt="logo git"><a href="https://github.com/brianbreder/mundo-da-musica">Mundo da musica</a>- Acesse meu repositorio no github</li>
+    <li><img src="img/logo insta.png" alt="logo instagram"> 
+    <a href="https://www.instagram.com/djbrianbr/">@DJBRIANBR</a>- Me sigam no instagram para acompanhar as próximas gigs</li> <li><img src="img/logo sound.png" alt="logo soundcloud"><a href="https://soundcloud.com/brian-coreano">DJ Brian </a>- ME siga no soundcloud para acompanhar todos os lançamentos</li>
+
+   </ul>
+   <h1>Agora como um brinde a todos vocês</h1>
+   <h2>Vou deixa abaixo todos os links disponiveis para download e visualização</h2>
+   <ol><li><img src="img/logo sound.png" alt="logo soundcloud"><a href="https://soundcloud.com/brian-coreano/dj-contest-mystica-valhalla?si=e46e6e39dd534357bfdfaaff7c5a9cb7&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Podcast #001 BRIAN</a>- (<b>HOUSE</b>) Clique aqui para baixar <a href="pag002.html" ><button>BAIXAR</button></a></li>
+   <li><img src="img/logo sound.png" alt="logo soundcloud"><a href="https://soundcloud.com/brian-coreano/minimeiradesaturno?si=bf78bd30be304f499f8abf735ddf9f2f&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">MINIMEIRA DE SATURNO - BRIAN - Música de outro mundo</a>- (<b>MINIMAL PROG</b>) Clique aqui para baixar <a href="pag002.html" ><button>BAIXAR</button></a></li>
+   <li><img src="img/logo sound.png" alt="logo soundcloud"><a href="MINIMEIRA DE JÚPITER - BRIAN - Música de outro mundo">MINIMEIRA DE JÚPITER - BRIAN - Música de outro mundo</a>- (<b>MINIMAL PROG</b>) Clique aqui para baixar <a href="pag002.html" ><button>BAIXAR</button></a></li>
+   </ol>
+   
 </body>
 </html>
